# arch-openrc

./: .gitignore  .kateproject  .travis.yml  README.md  build-for-manjaro-old-eudev.sh  build-for-manjaro.sh  build-list-eudev  build.sh  conflicts.txt  lib_devtools  mbuild.sh  msign.sh  pbuild.sh  run_post  run_pre
archbang/upower-nosystemd/src/upower-0.99.0/: COPYING  HACKING  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  upower-glib.pc  upower-glib.pc.in
archbang/upower-nosystemd/src/upower-0.99.0/doc/: Makefile  Makefile.am  Makefile.in  UPower-sections.txt  UPower.types  upower-docs.xml
archbang/upower-nosystemd/src/upower-0.99.0/doc/dbus/: Makefile  Makefile.am  Makefile.in  org.freedesktop.UPower.Device.ref.xml  org.freedesktop.UPower.KbdBacklight.ref.xml  org.freedesktop.UPower.Wakeups.ref.xml  org.freedesktop.UPower.ref.xml
archbang/upower-nosystemd/src/upower-0.99.0/doc/html/: Device.html  KbdBacklight.html  UPower-up-client.html  UPower-up-device.html  UPower-up-history-item.html  UPower-up-stats-item.html  UPower-up-types.html  UPower-up-wakeup-item.html  UPower.7.html  UPower.devhelp2  UPower.html  annotation-glossary.html  index.html  index.sgml  ix01.html  libupower-glib-helpers.html  libupower-glib.html  license.html  ref-dbus.html  tools-fileformats.html  upower.1.html  upowerd.8.html
archbang/upower-nosystemd/src/upower-0.99.0/doc/man/: Makefile  Makefile.am  Makefile.in  UPower.7  UPower.xml  upower.1  upower.xml  upowerd.8  upowerd.xml
archbang/upower-nosystemd/src/upower-0.99.0/etc/: Makefile  Makefile.am  Makefile.in
archbang/upower-nosystemd/src/upower-0.99.0/libupower-glib/: Makefile  Makefile.am  Makefile.in  UPowerGlib-1.0.gir  libupower-glib.la  libupower_glib_la-up-client-glue.lo  libupower_glib_la-up-client.lo  libupower_glib_la-up-device-glue.lo  libupower_glib_la-up-device.lo  libupower_glib_la-up-history-item.lo  libupower_glib_la-up-stats-item.lo  libupower_glib_la-up-types.lo  libupower_glib_la-up-wakeup-item.lo  libupower_glib_la-up-wakeups-glue.lo  libupower_glib_la-up-wakeups.lo  up-client-glue.c  up-client-glue.h  up-client.c  up-client.h  up-device-glue.c  up-device-glue.h  up-device.c  up-device.h  up-history-item.c  up-stats-item.c  up-types.c  up-types.h  up-version.h.in  up-wakeup-item.c  up-wakeups-glue.c  up-wakeups-glue.h  up-wakeups.c  up-wakeups.h
archbang/upower-nosystemd/src/upower-0.99.0/libupower-glib/.deps/: libupower_glib_la-up-client-glue.Plo  libupower_glib_la-up-client.Plo  libupower_glib_la-up-device-glue.Plo  libupower_glib_la-up-device.Plo  libupower_glib_la-up-history-item.Plo  libupower_glib_la-up-stats-item.Plo  libupower_glib_la-up-types.Plo  libupower_glib_la-up-wakeup-item.Plo  libupower_glib_la-up-wakeups-glue.Plo  libupower_glib_la-up-wakeups.Plo
archbang/upower-nosystemd/src/upower-0.99.0/libupower-glib/.libs/: libupower-glib.exp  libupower-glib.la  libupower-glib.lai  libupower-glib.so.2.0.0  libupower-glib.ver
archbang/upower-nosystemd/src/upower-0.99.0/po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  fr.gmo  fr.po  it.gmo  it.po  pl.gmo  pl.po  sv.gmo  sv.po
archbang/upower-nosystemd/src/upower-0.99.0/rules/: 95-upower-csr.rules  Makefile  Makefile.am  Makefile.in
archbang/upower-nosystemd/src/upower-0.99.0/src/: Makefile  Makefile.am  Makefile.in  org.freedesktop.UPower.service.in  up-backend.h  up-config.c  up-config.h  up-daemon-glue.h  up-daemon.c  up-daemon.h  up-device-glue.h  up-device-list.c  up-device-list.h  up-device.c  up-device.h  up-history.c  up-history.h  up-kbd-backlight-glue.h  up-kbd-backlight.c  up-kbd-backlight.h  up-main.c  up-marshal.c  up-marshal.h  up-marshal.list  up-native.h  up-polkit.c  up-polkit.h  up-self-test.c  up-wakeups-glue.h  up-wakeups.c  up-wakeups.h  upower.service.in  upowerd
archbang/upower-nosystemd/src/upower-0.99.0/src/.deps/: upowerd-up-config.Po  upowerd-up-daemon.Po  upowerd-up-device-list.Po  upowerd-up-device.Po  upowerd-up-history.Po  upowerd-up-kbd-backlight.Po  upowerd-up-main.Po  upowerd-up-marshal.Po  upowerd-up-polkit.Po  upowerd-up-wakeups.Po
archbang/upower-nosystemd/src/upower-0.99.0/src/.libs/: upowerd
archbang/upower-nosystemd/src/upower-0.99.0/src/dummy/: Makefile  Makefile.am  Makefile.in  libuptest.la  libuptest_la-up-backend.lo  libuptest_la-up-native.lo  up-backend.c  up-native.c
archbang/upower-nosystemd/src/upower-0.99.0/src/dummy/.deps/: libuptest_la-up-backend.Plo  (+1 more)
archbang/upower-nosystemd/src/upower-0.99.0/src/freebsd/: Makefile  Makefile.am  Makefile.in  TODO  up-acpi-native.c  up-acpi-native.h  up-acpi-native.vala  up-backend-acpi.h  up-backend.c  up-devd.c  up-devd.h  up-device-supply.c  up-device-supply.h  up-native.c  up-util.c  up-util.h
archbang/upower-nosystemd/src/upower-0.99.0/src/linux/: Makefile  Makefile.am  Makefile.in  hidpp-device.c  hidpp-device.h  hidpp-test  hidpp-test.c  integration-test  libupshared.la  libupshared_la-hidpp-device.lo  libupshared_la-sysfs-utils.lo  libupshared_la-up-backend.lo  libupshared_la-up-device-csr.lo  libupshared_la-up-device-hid.lo  libupshared_la-up-device-idevice.lo  libupshared_la-up-device-supply.lo  libupshared_la-up-device-unifying.lo  libupshared_la-up-device-wup.lo  libupshared_la-up-dock.lo  libupshared_la-up-input.lo  libupshared_la-up-native.lo  sysfs-utils.c  sysfs-utils.h  up-backend.c  up-device-csr.c  up-device-csr.h  up-device-hid.c  up-device-hid.h  up-device-idevice.c  up-device-idevice.h  up-device-supply.c  up-device-supply.h  up-device-unifying.c  up-device-unifying.h  up-device-wup.c  up-device-wup.h  up-dock.c  up-dock.h  up-input.c  up-input.h  (+1 more)
archbang/upower-nosystemd/src/upower-0.99.0/src/openbsd/: Makefile  Makefile.am  Makefile.in  up-apm-native.h  up-backend.c  up-native.c
archbang/upower-nosystemd/src/upower-0.99.0/tools/: Makefile  Makefile.am  Makefile.in  up-tool.c  upower
archbang/upower-nosystemd/src/upower-0.99.0/tools/.deps/: upower-up-tool.Po
archbang/upower-nosystemd/src/upower-0.99.0/tools/.libs/: upower
scripts/: run  (+12 more)
(+1876 files in other folders)
